fix test env vars + fix string array to list Roles